agregando funcion de notificaciones

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 
             <section class="mensajes">
                 <div class="mostrando-texto">
-                    <p class="texto-mostrado">
-
-                    </p>
+                    <div id="notification-container"></div>
+                    <p class="texto-mostrado"></p>
                     
                     <img src="Img/Muñeco.png" class="imagen" alt="muñeco">
                     
