agregando la indicacion y Finalizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <article class="recuadro">
             <section class="encriptador">
                 <textarea class="input-encriptar" cols="30" rows="15" placeholder="Ingrese el texto aqui"></textarea>
-                
+                <p class="warning"><i class="fa-solid fa-circle-exclamation" style="color: #f5390a;"></i> Solo letras minúsculas y sin acentos</p>
                 <input onclick="encriptar();" class="btn1" type="submit" value="Encriptar">
                 <input onclick="desencriptar();" class="btn2" type="submit" value="Desencriptar">
             </section>
